--- a/IzvorniKod/frontend/src/styles/Login.css
+++ b/IzvorniKod/frontend/src/styles/Login.css
@@ -16,20 +16,28 @@
 }
 
 .login-submit-btn {
-  background-color: #4285f4;
+  background-color: #000;
   border: none;
   color: white;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 16px;
   margin: 4px 2px;
   cursor: pointer;
-  border-radius: 4px;
+  border-radius: 25px;
   transition: background-color 0.3s ease;
 }
 
 .login-submit-btn:hover {
-  background-color: #357ae8;
+  background-color: #333;
+}
+
+.google-logo {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
 }
