--- a/IzvorniKod/frontend/src/styles/Menza.css
+++ b/IzvorniKod/frontend/src/styles/Menza.css
@@ -1,53 +1,35 @@
-.main-content {
-  padding-top: 70px; /* Adjust this value based on the height of your navbar */
+body {
+  background-color: #f8f9fa;
 }
 
-.restaurant-info {
-  background: white;
-  padding: 20px;
+.mt-4 {
+  margin-top: 1.5rem !important;
+}
+
+.card {
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  max-width: 600px;
-  margin: 20px auto;
-  text-align: left;
 }
 
-.restaurant-info img {
-  width: 100%;
-  height: auto;
-  border-radius: 10px;
-  margin-bottom: 20px;
+.card-title {
+  font-size: 1.5rem;
+  font-weight: bold;
 }
 
-.restaurant-info h1 {
-  font-size: 24px;
-  margin-bottom: 10px;
-  color: #333;
-}
-
-.restaurant-info p {
-  font-size: 16px;
-  margin: 5px 0;
+.card-text {
+  font-size: 1rem;
   color: #555;
 }
 
-.working-hours {
-  margin-top: 20px;
+.working-hours h5 {
+  margin-top: 1rem;
+  font-size: 1.25rem;
+  font-weight: bold;
 }
 
-.working-hours h2 {
-  font-size: 20px;
-  margin-bottom: 10px;
-  color: #333;
-}
-
-.working-hours ul {
-  list-style-type: none;
-  padding: 0;
-}
-
-.working-hours li {
-  font-size: 16px;
-  margin: 5px 0;
+.list-group-item {
+  font-size: 1rem;
   color: #555;
 }
+
+
