--- a/IzvorniKod/frontend/src/styles/NavBar.css
+++ b/IzvorniKod/frontend/src/styles/NavBar.css
@@ -1,61 +1,65 @@
 .logo-img {
-    height: 14vh;
-    margin: 0;
+  height: 14vh;
+  margin: 0;
 }
 
 /* Stil za navigacijske botune */
 .nav-item .nav-btn {
-    background: none;
-    border: none;
-    color: #333;
-    font-weight: normal;
-    cursor: pointer;
-    padding: 0;
-    text-decoration: none;
-    margin: 0 20px;
+  background: none;
+  border: none;
+  color: #333;
+  font-weight: normal;
+  cursor: pointer;
+  padding: 0;
+  text-decoration: none;
+  margin: 0 20px;
 }
 
 .nav-item .nav-btn:hover {
-    color: #0098b3;
-    background: none;
+  color: #0098b3;
+  background: none;
 }
 
 .nav-btn-container {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    gap: 20px;
-    align-items: center;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  gap: 20px;
+  align-items: center;
 }
 
 /* Stil za pozadinu navbara */
 .navbar-bg {
-    background-color: white !important;
+  background-color: white !important;
 }
 
 /* Navbar - fiksna pozicija i stil */
 .navbar {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
-    background-color: white;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    padding: 10px;
-    height: 16vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1000;
+  background-color: white;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  height: 16vh;
 }
 
 /* Kontejner za elemente unutar navbara */
 .navbar .container-fluid {
-    display: flex;
-    align-items: center;
-    justify-content: space-between; /* Logo lijevo, ostatak desno */
-    position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between; /* Logo lijevo, ostatak desno */
+  position: relative;
 }
 
 /* Centriranje logo-a */
 .logo-img {
-    margin-right: auto; /* Osigurava da logo ostane skroz lijevo */
+  margin-right: auto; /* Osigurava da logo ostane skroz lijevo */
+}
+
+.logo-img:hover {
+  cursor: pointer;
 }
