--- a/IzvorniKod/frontend/src/styles/Login.css
+++ b/IzvorniKod/frontend/src/styles/Login.css
@@ -17,7 +17,7 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   text-align: center;
-  color: #0098b3;
+  color: red;
 }
 
 .login-submit-btn {
