--- a/IzvorniKod/frontend/src/styles/App.css
+++ b/IzvorniKod/frontend/src/styles/App.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url('../../pattern2.png');
+  background-image: url('../../zagreb.jpeg');
   background-size:auto;
   background-position: center;
   background-attachment: fixed;
