--- a/IzvorniKod/frontend/src/styles/Menza.css
+++ b/IzvorniKod/frontend/src/styles/Menza.css
@@ -1,3 +1,7 @@
+body {
+  background: linear-gradient(to right, #0098b3, #feb47b);
+}
+
 .mt-4 {
   margin-top: 1.5rem !important;
 }
@@ -31,7 +35,7 @@
 
 .list-group-item {
   display: flex;
-  justify-content: space-between;
+  justify-content:center;
   align-items: center;
 }
 
