--- a/IzvorniKod/frontend/src/styles/App.css
+++ b/IzvorniKod/frontend/src/styles/App.css
@@ -1,13 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Dongle&family=Quicksand:wght@300..700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Dongle&family=Quicksand:wght@300..700&display=swap");
 
 * {
-  font-family: 'Quicksand', Arial, sans-serif;
+  font-family: "Quicksand", Arial, sans-serif;
 }
 
 body {
-  background-image: url('../../.png');
-  background-size:auto;
+  background-image: url("../../.png");
+  background-size: auto;
   background-position: center;
   background-attachment: fixed;
-  /*background-color: #0098b397;*/
+  background: linear-gradient(to bottom right, rgba(0, 142, 167, 0.6), rgba(43, 133, 128, 0.9)), url("../../.png");
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
 }
