Favorite menze fix

--- a/IzvorniKod/frontend/src/styles/MenuCard.css
+++ b/IzvorniKod/frontend/src/styles/MenuCard.css
@@ -36,7 +36,7 @@
 
 .input-custom {
   padding: 4px;
-  margin: 5px 0;
+  margin: 5px 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
   box-sizing: border-box;
