--- a/IzvorniKod/frontend/src/styles/MenuCard.css
+++ b/IzvorniKod/frontend/src/styles/MenuCard.css
@@ -13,6 +13,20 @@
   cursor: pointer;
   transition: background-color 0.3s ease;
   margin-right: 10px;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.save-btn{
+  background-color: rgb(0, 155, 0);
+}
+
+.save-btn:hover{
+  background-color: green;
 }
 
 .button-custom-primary {
@@ -46,18 +60,18 @@
   outline: none;
 }
 
-.add-btn, .add-new-btn{
+.add-btn,
+.add-new-btn {
   border-radius: 50px;
   background-color: #0098b3;
   color: white;
   font-size: 16px;
 }
 
-.add-btn:hover{
+.add-btn:hover {
   background-color: #00758a;
-
 }
-.add-new-btn:hover{
+.add-new-btn:hover {
   background-color: #00758a;
 }
 
