--- a/IzvorniKod/frontend/src/styles/Menza.css
+++ b/IzvorniKod/frontend/src/styles/Menza.css
@@ -186,7 +186,7 @@
   }
 }
 
-.ocjena{
+.ocjena {
   display: flex;
   padding: 10px 10px 0 10px;
   justify-content: center;
@@ -270,11 +270,30 @@
   color: rgb(255, 204, 0);
 }
 
-.save-rating-btn{  
+.save-rating-btn {
   border: none;
   border-radius: 50px;
   background-color: #0098b3;
   color: white;
   padding: 6px 12px 6px 12px;
   font-size: 14px;
+}
+
+.custom-btn {
+  padding: 10px 20px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  margin-right: 10px;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.custom-icon-size{
+  font-size: larger;
 }
