--- a/IzvorniKod/frontend/src/styles/AddMenza.css
+++ b/IzvorniKod/frontend/src/styles/AddMenza.css
@@ -1,8 +1,8 @@
 .dodaj-menzu-container{
     display: flex;
     flex-direction: column;
-    align-items: center; /* Centers the children horizontally */
-    justify-content: center; /* Centers the children vertically, if needed */
+    align-items: center;
+    justify-content: center;
     text-align: center; 
     padding-top: 24vh;
 }
@@ -17,10 +17,10 @@
 
 body {
     display: flex;
-    justify-content: center; /* Centers horizontally */
-    align-items: center; /* Centers vertically */
-    min-height: 100vh; /* Ensures the body takes the full height of the viewport */
-    margin: 0; /* Removes default margin */
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    margin: 0;
   }
 
 .select-container{
